squash! a27d3491575e8671facb76905fc132a95834d3aa

MDEV-38521 TO_DATE: Date strings with non-ASCII symbols cause warnings
           and wrong results

Known limitations:
- Format string cannot contain non ascii characters. This is because
  TO_DATE depends on the format string parser 'parse_format_string()'
  used by TO_STR(). Should be fixed at some point in time.